--- a/MvcMusic/appsettings.json
+++ b/MvcMusic/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MvcMusicContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMusicContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
