--- a/MvcMusic/appsettings.Development.json
+++ b/MvcMusic/appsettings.Development.json
@@ -4,6 +4,9 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "ConnectionStrings": {
+      "MvcMusicContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMusicContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
