--- a/MvcMusic/appsettings.Development.json
+++ b/MvcMusic/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     },
     "ConnectionStrings": {
-      "MvcMusicContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMusicContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "MvcMusicContext": "Server=(localdb)\\\\mssqllocaldb;Database=MvcMusicContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
