--- a/MvcMusic/appsettings.json
+++ b/MvcMusic/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMusicContext": "Server=tcp:beadi19.database.windows.net,1433;Initial Catalog=MvcMusicDB;Persist Security Info=False;User ID=beaIdenServ;Password=!M0Depasse!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
